# ccqQDAGS

./: .gitignore  CMakeLists.txt  buildTest.py  buildTree.py  happyLittleTree.py
data/: R1  R2  R3  prop-direct-P1366  prop-direct-P197  prop-direct-P800
data2/: R_barbell  Rp_barbell  S  S_barbell  Sp_barbell  T  T_barbell  Tp_barbell  U_barbell  V  W  W2  X  apple1  apple13  apple2  apple3  left  level0  level1  p1366mini  p197mini  p800mini  right  self  top
includes/: ghd.hpp  initArray.hpp  qdags.hpp  rank.hpp  se_quadtree.hpp
queries/: barbell.cpp  ghd_test.cpp  j3.cpp  j3_ghd.cpp  join_test.cpp  square_tadpole1.cpp  triangle_barbell.cpp
runqueries/: runqueries_square_tadpole.sh  runqueries_triangle_barbell.sh
runqueries/outputs/: square_tadpole1.csv  triangle_barbell.csv
src/: ghd_optimal_joins.cpp  joins.cpp
